2010-01-19  Steve Block  <steveblock@google.com>

        Unreviewed build fix.

        Fixes Snow Leopard build due to http://trac.webkit.org/changeset/53464

        * Plugins/Hosted/WebHostedNetscapePluginView.mm: Modified. Import <WebCore/Bridge.h>

2010-01-19  Steve Block  <steveblock@google.com>

        Reviewed by Adam Barth.

        Renames WebCore/bridge/runtime.[cpp|h] to WebCore/bridge/Bridge.[cpp|h]
        https://bugs.webkit.org/show_bug.cgi?id=33801

        * Plugins/Hosted/ProxyInstance.h:

2010-01-18  Enrica Casucci  <enrica@apple.com>

        Reviewed by Darin Adler.

        Script attributes are copied and pasted, making cross-domain attacks possible (30019)
        <rdar://problem/6008809>
        https://bugs.webkit.org/show_bug.cgi?id=30019

        * WebView/WebFrame.mm:
        (-[WebFrame _documentFragmentWithMarkupString:baseURLString:]): Modified the call to createMarkupString.

2010-01-18  Steve Falkenburg  <sfalken@apple.com>

        Rubber-stamped by Sam Weinig.

        Add missing export for Geolocation.

        * WebKit.exp:

2010-01-18  Adam Roben  <aroben@apple.com>

        Add +[WebView _setDomainRelaxationForbidden:forURLScheme:]

        WebKit/mac part of fixing <http://webkit.org/b/33806>
        <rdar://problem/7552837> Would like API to disallow setting of
        document.domain for pages with certain URL schemes

        Reviewed by Sam Weinig.

        * WebView/WebView.mm:
        (+[WebView _setDomainRelaxationForbidden:forURLScheme:]):
        * WebView/WebViewPrivate.h:
        Added. Calls through to SecurityOrigin.

2010-01-16  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Oliver Hunt.

        Cache JS string values made from DOM strings (Dromaeo speedup)
        https://bugs.webkit.org/show_bug.cgi?id=33768
        <rdar://problem/7353576>
        
        * Plugins/Hosted/ProxyInstance.mm:
        (WebKit::ProxyInstance::stringValue): Explicitly make a String, since char*